# backend_challenge_open_ai

./: app.py  pyproject.toml
