[project]
name = "backend-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Lucas Ramos",email = "lcsramos.r@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.128.1,<0.129.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "supabase (>=2.27.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
